# urlchecker

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  SECURITY_AUDIT_2026-07-21.md  TEST_REPORT.txt  bot.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.txt  run.bat  run.sh  scam_links.txt  url_security_bot_v1.2.0.zip.sha256  ИНСТРУКЦИЯ_ПО_БАЗЕ_СКАМ_ССЫЛОК.md  ИНСТРУКЦИЯ_ПО_ЗАПУСКУ_URL_GUARD_BOT.md
scripts/: build_release.py  local_stress_test.py  loopback_network_lab.py  security_check.py
security_reports/: bandit.json  dependency_audit.md  local_stress.stdout.txt  loopback_network_lab.stdout.txt  pytest.txt  runtime_socket_check.json  security_check.json  wheel_build.txt
tests/: conftest.py  test_analyzer.py  test_handlers.py  test_heuristics.py  test_models.py  test_rate_limiter.py  test_threat_list.py  test_url_checker.py  test_url_validation.py
url_guard_bot/: bot.py  config.py  handlers.py  threat_list.py  tracker_detector.py  url_checker.py
url_guard_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
